# NexCache-SOVEREIGN-NV-RUBIN-4.0

./: .gitignore  00-RELEASENOTES  00-RELEASENOTES.md  ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  DEVELOPMENT_GUIDE.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  LAUNCH_VERA_M3.3.sh  LICENSE  MAINTAINERS.md  Makefile  README.md  README_RELEASE.md  REPORT.md  SECURITY.md  crdt_fuzz  docker_build_test.sh  fenwick_test.c  make_output.txt  nexcache.conf  print_mutex.c  rdma_setup.sh  rl_test  runtest  sentinel.conf
.github/workflows/: main.yml  nexcache-ci.yml
benchmarks/: compare.sh  feature_bench.sh  run_all.sh
cmake/Modules/: NexCacheSetup.cmake  Packaging.cmake  SourceFiles.cmake  Utils.cmake  ValkeySetup.cmake
docs/: EMULATION_GUIDE.md
scripts/: benchmark_gate.sh  commodity_benchmark.sh  package_release.sh  setup_rdma_emulation.sh
src/: .clang-format-ignore  .gitignore  .make-settings  CMakeLists.txt  Makefile  Makefile.dep  acl.c  acl.d  adlist.c  adlist.d  adlist.h  ae.c  ae.d  ae.h  ae_epoll.c  ae_evport.c  ae_kqueue.c  ae_select.c  allocator_defrag.c  allocator_defrag.d  allocator_defrag.h  anet.c  anet.d  anet.h  aof.c  aof.d  asciilogo.h  bio.c  bio.d  bio.h  bitops.c  bitops.d  blocked.c  blocked.d  call_reply.c  call_reply.d  call_reply.h  childinfo.c  childinfo.d  cli_commands.c  (+279 more)
src/bloom/: nexbloom.c  nexbloom.d  nexbloom.h
src/cluster/: cluster.c  cluster.h
src/commands/: README.md  acl-cat.json  acl-deluser.json  acl-dryrun.json  acl-genpass.json  acl-getuser.json  acl-help.json  acl-list.json  acl-load.json  acl-log.json  acl-save.json  acl-setuser.json  acl-users.json  acl-whoami.json  acl.json  anomaly_config.json  anomaly_info.json  append.json  asking.json  auth.json  bgrewriteaof.json  bgsave.json  bitcount.json  bitfield.json  bitfield_ro.json  bitop.json  bitpos.json  blmove.json  blmpop.json  blpop.json  brpop.json  brpoplpush.json  bzmpop.json  bzpopmax.json  bzpopmin.json  client-caching.json  client-capa.json  client-getname.json  client-getredir.json  client-help.json  (+395 more)
src/compression/: auto.c  auto.h
src/core/: engine.c  engine.d  engine.h  nexstorage.c  nexstorage.d  nexstorage.h  planes.c  planes.d  planes.h  scheduler.c  scheduler.d  scheduler.h  subkey_ttl.c  subkey_ttl.d  subkey_ttl.h  vll.c  vll.d  vll.h
src/crdt/: crdt.c  crdt.d  crdt.h  fuzz_test.c  fuzz_test.h
src/flash/: flash.c  flash.d  flash.h
src/hashtable/: nexdash.c  nexdash.d  nexdash.h  rl_eviction_test.c
src/memory/: arch_probe.c  arch_probe.d  arch_probe.h  arena.c  arena.d  arena.h  hazard_ptr.c  hazard_ptr.d  hazard_ptr.h  hybrid.c  hybrid.d  hybrid.h  prefetch.h  tagged_ptr.h
src/modules/: CMakeLists.txt  Makefile  helloacl.c  helloblock.c  hellocluster.c  hellodict.c  hellohook.c  hellotimer.c  hellotype.c  helloworld.c
src/modules/lua/: CMakeLists.txt  Makefile  README.md  debug_lua.c  debug_lua.h  engine_lua.c  engine_structs.h  function_lua.c  function_lua.h  list.c  list.h  script_lua.c  script_lua.h
src/network/: dpdk_net.c  fallback_net.c  fallback_net.h  io_uring_net.c  net_backend.h  protocol_detect.c  protocol_detect.d  protocol_detect.h  rdma_replication.c  rdma_replication.h  websocket.c  websocket.d  websocket.h
src/observability/: anomaly.c  anomaly.d  anomaly.h  dashboard.c  dashboard.h  otel.c  otel.h
src/persistence/: persist.c  persist.h
src/security/: pqcrypto.c  pqcrypto.h  quota.c  quota.d  quota.h
src/segcache/: segcache.c  segcache.d  segcache.h
src/streams/: reactive.c  reactive.h
src/timeseries/: nexts.c  nexts.h
src/trace/: README.md  trace.c  trace.d  trace.h  trace_aof.c  trace_aof.d  trace_aof.h  trace_cluster.c  trace_cluster.d  trace_cluster.h  trace_commands.c  trace_commands.d  trace_commands.h  trace_db.c  trace_db.d  trace_db.h  trace_rdb.c  trace_rdb.d  trace_rdb.h  trace_server.c  trace_server.d  trace_server.h
src/unit/: .clang-format  CMakeLists.txt  Makefile  README.md  custom_matchers.hpp  example_tests.cpp  generate-redefine-syms.py  generate-wrappers.py  main.cpp  test_bitops.cpp  test_crc64.cpp  test_crc64combine.cpp  test_dict.cpp  test_endianconv.cpp  test_entry.cpp  test_fifo.cpp  test_hashtable.cpp  test_intset.cpp  test_kvstore.cpp  test_listpack.cpp  test_mutexqueue.cpp  test_networking.cpp  test_object.cpp  test_quicklist.cpp  test_rax.cpp  test_sds.cpp  test_sha1.cpp  test_sha256.cpp  test_util.cpp  test_valkey_strtod.cpp  test_vector.cpp  test_vset.cpp  test_ziplist.cpp  test_zipmap.cpp  test_zmalloc.cpp  wrapper_util.py  wrappers.h
src/vector/: cagra_gpu.h  hnsw.c  hnsw.d  hnsw.h  hybrid_search.c  hybrid_search.d  hybrid_search.h  quantization.c  quantization.d  quantization.h  router.c  router.d  router.h  simd_config.h
tests/: README.md  instances.tcl  test_advanced.c  test_arena.c  test_core_v2.c  test_helper.tcl  test_v4.c
tests/assets/: corrupt_empty_keys.rdb  corrupt_ziplist.rdb  default.conf  encodings-rdb12.rdb  encodings-rdb75-unknown-types.rdb  encodings-rdb987-unknown-types.rdb  encodings-rdb987.rdb  encodings.rdb  hash-ziplist.rdb  hash-zipmap.rdb  list-quicklist.rdb  minimal-cluster-legacy.conf  minimal-cluster.conf  minimal.conf  rdb-preamble.aof  scriptbackup.rdb  test_cli_hint_suite.txt  zset-ziplist.rdb
tests/cluster/: cluster.tcl  run.tcl
tests/helpers/: bg_block_op.tcl  bg_complex_data.tcl  fake_nexcache_node.tcl  gen_write_load.tcl
tests/integration/: aof-multi-part.tcl  aof-race.tcl  aof.tcl  corrupt-dump-fuzzer.tcl  cross-version-replication.tcl  dismiss-mem.tcl  dual-channel-replication.tcl  failover.tcl  logging.tcl  nexcache-benchmark.tcl  nexcache-check-rdb.tcl  nexcache-cli.tcl  psync2-pingoff.tcl  psync2-reg.tcl  rdb.tcl  replica-redirect.tcl  replication-4.tcl  replication-buffer.tcl  replication-psync.tcl  replication.tcl  (+5 more)
utils/: gen-test-certs.sh  generate-command-code.py  generate-module-api-doc.rb  install_server.sh  nexcache-copy.rb  nexcache-sha1.rb  nexcache_init_script  nexcache_init_script.tpl  req-res-log-validator.py  systemd-nexcache_multiple_servers@.service  systemd-nexcache_server.service
(+212 files in other folders)
